--- a/public/index.html
+++ b/public/index.html
@@ -21,16 +21,25 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+
+    <!-- Nav CSS-->
+    <link rel="stylesheet" href="styles/nav.css" type="text/css">
+
+    <!-- Font Awesome Lib CDN-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
 
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
       <span>tweeter</span>
+      <span>Write a new tweet</span>
+      <i class="fas fa-angle-double-down"></i>
     </nav>
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">TEST</main>
+    <h3> hello</h3>
     
   </body>
 </html>
