Fixing nav display

--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,11 @@
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <span>tweeter</span>
-      <span>Write a new tweet</span>
+      <span class="logo">tweeter</span>
+      <div class="nav-right">
+      <span class="nav-text"><strong>Write</strong> a new tweet </span>
       <i class="fas fa-angle-double-down"></i>
+    </div>
     </nav>
 
     <!-- Page-specific (main) content here -->
