--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
 
     <!-- Font Awesome Lib CDN-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--Header-->
+    <link rel="stylesheet" href="styles/header.css" type="text/css">
   </head>
 
   <body>
@@ -38,7 +40,17 @@
       <i class="fas fa-angle-double-down"></i>
     </div>
     </nav>
-
+    
+    <!--Header-->
+    <header>
+      <div class="avatar">
+          <img src="/images/profile-hex.png"> 
+      </div>
+      <br>
+      <div>
+          <h2 class="name">Raymond Lin</h2>
+      </div>
+  </header>
     <!-- Page-specific (main) content here -->
     <main class="container">TEST</main>
     <h3> hello</h3>
