Adding CSS for button, form, counter, and creating classes for div, form, label

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,8 @@
     />
     <!--Header-->
     <link rel="stylesheet" href="styles/header.css" type="text/css" />
+    <!--Tweet CSS-->
+    <link rel="stylesheet" href="styles/new-tweet.css" type="text/css"/>
   </head>
 
   <body>
@@ -66,6 +68,18 @@
     </header>
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <section class="new-tweet">
+      <h2>Compose Tweet</h2>
+        <form class="form" method="POST" action="/tweets/">
+          <label class="txt" for="tweet-text">What are you humming about? </label>
+          <textarea name="text" id="tweet-text"></textarea>
+          <div class="tweet-button-counter">
+            <button class="tweet-button"type="submit">Tweet</button>
+            <output name="counter" class="counter" for="tweet-text">140</output>
+          </div>
+        </form>
+      </section>
+      <!--
       <h1>Test Tweet</h1>
       <h3>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lobortis
@@ -80,6 +94,7 @@
         viverra id. Maecenas a iaculis eros. Integer vehicula mi in dui
         pellentesque porttitor.
       </h3>
+    -->
     </main>
   </body>
 </html>
