--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,9 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
 
+    <!--Character Count-->
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
     <!-- Nav CSS-->
     <link rel="stylesheet" href="styles/nav.css" type="text/css" />
 
