Adding tweet container, on-hover CSS for tweet container and tweet icons.

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,9 @@
     <!-- Nav CSS-->
     <link rel="stylesheet" href="styles/nav.css" type="text/css" />
 
+    <!--Tweets CSS-->
+    <link rel="stylesheet" href="styles/tweets.css" type="text/css">
+
     <!-- Font Awesome Lib CDN-->
     <link
       rel="stylesheet"
@@ -45,6 +48,7 @@
     />
     <!--Header-->
     <link rel="stylesheet" href="styles/header.css" type="text/css" />
+
     <!--Tweet CSS-->
     <link rel="stylesheet" href="styles/new-tweet.css" type="text/css"/>
   </head>
@@ -60,7 +64,7 @@
     </nav>
 
     <!--Header-->
-    <header>
+    <header class="tweeter-header">
       <div class="avatar">
         <img src="/images/profile-hex.png" />
       </div>
@@ -69,6 +73,7 @@
         <h2 class="name">Raymond Lin</h2>
       </div>
     </header>
+
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
@@ -81,6 +86,32 @@
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
+      </section>
+
+    <!--Displaying Tweets-->
+      <section class="tweet-container">
+        <article class="tweets">
+            <div class="users-profile">
+              <div class="name-picture">
+              <img class="profile-picture" src="images/profile-hex.png">
+              <h3 class="username" >Newton</h3>
+              </div>
+              <div class="display-name">@SirIsaac</div>
+            </div>
+            <div class="tweet-msg">
+              If I have seen further it is by standing on the shoulders of giants
+            </div>
+            <div class="dates"> 
+              <h2 class="date-size">10 days ago</h2>
+            <div class="tweet-icons">
+              <i class="fas fa-flag icon"></i>
+              <i class="fas fa-retweet icon"></i>
+              <i class="fas fa-heart icon"></i>
+            </div>
+            </div>
+        </article>
+
+
       </section>
       <!--
       <h1>Test Tweet</h1>
