Removing Test Tweet on line 114, removed lines 90-109 as tweets are now dynamically rendered in client.js. Adding createTweetElement and renderTweet in client.js.

--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,6 @@
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-    <!-- App JS -->
-    <script type="text/javascript" src="/scripts/client.js"></script>
-
     <!--Character Count-->
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 
@@ -89,46 +86,11 @@
       </section>
 
     <!--Displaying Tweets-->
-      <section class="tweet-container">
-        <article class="tweets">
-            <div class="users-profile">
-              <div class="name-picture">
-              <img class="profile-picture" src="images/profile-hex.png">
-              <h3 class="username" >Newton</h3>
-              </div>
-              <div class="display-name">@SirIsaac</div>
-            </div>
-            <div class="tweet-msg">
-              If I have seen further it is by standing on the shoulders of giants
-            </div>
-            <div class="dates"> 
-              <h2 class="date-size">10 days ago</h2>
-            <div class="tweet-icons">
-              <i class="fas fa-flag icon"></i>
-              <i class="fas fa-retweet icon"></i>
-              <i class="fas fa-heart icon"></i>
-            </div>
-            </div>
-        </article>
-
-
+      <section class="tweet-container" id="tweets-container">
+       
       </section>
-      <!--
-      <h1>Test Tweet</h1>
-      <h3>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lobortis
-        erat et placerat ultrices. Aenean rhoncus sem sed orci convallis, quis
-        pulvinar tellus condimentum. Ut fermentum dictum augue vitae maximus.
-        Curabitur metus arcu, dictum vel tristique vel, molestie sed felis.
-        Suspendisse sed nisi erat. Donec in enim vulputate, accumsan quam
-        ornare, molestie mi. Quisque cursus feugiat massa, eget molestie est
-        dignissim sed. Aliquam pretium purus nunc, tincidunt posuere lacus
-        fringilla efficitur. Proin vestibulum ornare urna. Nunc nec sollicitudin
-        urna, a tempus lacus. Aliquam congue bibendum odio, vitae tempus magna
-        viverra id. Maecenas a iaculis eros. Integer vehicula mi in dui
-        pellentesque porttitor.
-      </h3>
-    -->
     </main>
+    <!-- App JS -->
+    <script type="text/javascript" src="/scripts/client.js"></script>
   </body>
 </html>
