--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
     <main class="container">
       <section class="new-tweet">
       <h2>Compose Tweet</h2>
-        <form class="form" method="POST" action="/tweets/">
+        <form class="form" method="POST" action="/tweets/" id="tweet-submit">
           <label class="txt" for="tweet-text">What are you humming about? </label>
           <textarea name="text" id="tweet-text"></textarea>
           <div class="tweet-button-counter">
@@ -87,8 +87,8 @@
 
     <!--Displaying Tweets-->
       <section class="tweet-container" id="tweets-container">
-       
       </section>
+      
     </main>
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
