--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,10 @@
 
     <!--Tweet CSS-->
     <link rel="stylesheet" href="styles/new-tweet.css" type="text/css"/>
+
+    <!--Timeago-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
   </head>
 
   <body>
