Removed Form Methods and Action from line 100 since jQuery was being used. Added a counter reset after form submission on line 81

--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
       <div class="tweet-box">
       <section class="new-tweet">
       <h2>Compose Tweet</h2>
-        <form class="form" method="POST" action="/tweets/" id="tweet-submit">
+        <form class="form" id="tweet-submit">
           <label class="txt" for="tweet-text"> </label>
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
           <div class="tweet-button-counter">
